--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body {
     /* Shift view slightly down */
     transform: scale(1.05);
     /* Zoom in to crop edges */
-    border-radius: 0;
+    border-radius: 24px;
     box-shadow: 20px 20px 0px rgba(0, 0, 0, 0.05);
 }
 
